@@ -6,10 +6,11 @@ import io.kestra.core.models.executions.TaskRun;
 import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.flows.Output;
 import io.kestra.core.models.flows.State;
+import io.kestra.core.models.flows.State.History;
 import io.kestra.core.runners.DefaultRunContext;
 import io.kestra.core.runners.SubflowExecutionResult;
+import io.kestra.core.services.VariablesService;
 import io.micronaut.context.ApplicationContext;
-import org.hamcrest.Matchers;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -27,9 +28,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.hasProperty;
-import static org.hamcrest.Matchers.is;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @ExtendWith(MockitoExtension.class)
@@ -49,6 +48,7 @@ class SubflowTest {
 
     @BeforeEach
     void beforeEach() {
+        Mockito.when(applicationContext.getBean(VariablesService.class)).thenReturn(new VariablesService());
         Mockito.when(runContext.logger()).thenReturn(LOG);
         Mockito.when(runContext.getApplicationContext()).thenReturn(applicationContext);
     }
@@ -67,7 +67,7 @@ class SubflowTest {
             Execution.builder().build()
         );
 
-        assertThat(result, is(Optional.empty()));
+        assertThat(result).isEmpty();
     }
 
     @SuppressWarnings("deprecation")
@@ -85,7 +85,7 @@ class SubflowTest {
         // When
         Optional<SubflowExecutionResult> result = subflow.createSubflowExecutionResult(
             runContext,
-            TaskRun.builder().state(DEFAULT_SUCCESS_STATE).build(),
+            TaskRun.builder().state(DEFAULT_SUCCESS_STATE).namespace("io.kestra.test").flowId("flow").executionId("execution").taskId("task").id("id").build(),
             Flow.builder().build(),
             Execution.builder().id(EXECUTION_ID).state(DEFAULT_SUCCESS_STATE).build()
         );
@@ -98,13 +98,15 @@ class SubflowTest {
             .outputs(Collections.emptyMap())
             .build()
             .toMap();
-        assertThat(result.get().getParentTaskRun().getOutputs(), is(expected));
+        assertThat(result.get().getParentTaskRun().getOutputs()).containsAllEntriesOf(expected);
 
-        assertThat(result.get().getParentTaskRun().getAttempts().get(0).getState().getHistories(), Matchers.contains(
-            hasProperty("state", is(State.Type.CREATED)),
-            hasProperty("state", is(State.Type.RUNNING)),
-            hasProperty("state", is(State.Type.SUCCESS))
-        ));
+        assertThat(result.get().getParentTaskRun().getAttempts().getFirst().getState().getHistories())
+            .extracting(History::getState)
+            .containsExactly(
+                State.Type.CREATED,
+                State.Type.RUNNING,
+                State.Type.SUCCESS
+            );
     }
 
     @SuppressWarnings("deprecation")
@@ -125,7 +127,7 @@ class SubflowTest {
         // When
         Optional<SubflowExecutionResult> result = subflow.createSubflowExecutionResult(
             runContext,
-            TaskRun.builder().state(DEFAULT_SUCCESS_STATE).build(),
+            TaskRun.builder().state(DEFAULT_SUCCESS_STATE).namespace("io.kestra.test").flowId("flow").executionId("execution").taskId("task").id("id").build(),
             Flow.builder().build(),
             Execution.builder().id(EXECUTION_ID).state(DEFAULT_SUCCESS_STATE).build()
         );
@@ -138,13 +140,15 @@ class SubflowTest {
             .outputs(outputs)
             .build()
             .toMap();
-        assertThat(result.get().getParentTaskRun().getOutputs(), is(expected));
+        assertThat(result.get().getParentTaskRun().getOutputs()).containsAllEntriesOf(expected);
 
-        assertThat(result.get().getParentTaskRun().getAttempts().get(0).getState().getHistories(), Matchers.contains(
-            hasProperty("state", is(State.Type.CREATED)),
-            hasProperty("state", is(State.Type.RUNNING)),
-            hasProperty("state", is(State.Type.SUCCESS))
-        ));
+        assertThat(result.get().getParentTaskRun().getAttempts().get(0).getState().getHistories())
+            .extracting(History::getState)
+            .containsExactly(
+                State.Type.CREATED,
+                State.Type.RUNNING,
+                State.Type.SUCCESS
+            );
     }
 
     @Test
@@ -162,7 +166,7 @@ class SubflowTest {
         // When
         Optional<SubflowExecutionResult> result = new Subflow().createSubflowExecutionResult(
             runContext,
-            TaskRun.builder().state(DEFAULT_SUCCESS_STATE).build(),
+            TaskRun.builder().state(DEFAULT_SUCCESS_STATE).namespace("io.kestra.test").flowId("flow").executionId("execution").taskId("task").id("id").build(),
             flow,
             Execution.builder().id(EXECUTION_ID).state(DEFAULT_SUCCESS_STATE).build()
         );
@@ -177,12 +181,14 @@ class SubflowTest {
             .outputs(Map.of(output.getId(), output.getValue()))
             .build()
             .toMap();
-        assertThat(outputs, is(expected));
+        assertThat(outputs).containsAllEntriesOf(expected);
 
-        assertThat(result.get().getParentTaskRun().getAttempts().get(0).getState().getHistories(), Matchers.contains(
-            hasProperty("state", is(State.Type.CREATED)),
-            hasProperty("state", is(State.Type.RUNNING)),
-            hasProperty("state", is(State.Type.SUCCESS))
-        ));
+        assertThat(result.get().getParentTaskRun().getAttempts().getFirst().getState().getHistories())
+            .extracting(History::getState)
+            .containsExactly(
+                State.Type.CREATED,
+                State.Type.RUNNING,
+                State.Type.SUCCESS
+            );
     }
 }
